--- a/example/build.gradle
+++ b/example/build.gradle
@@ -21,7 +21,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
-//    compile project(':library')
-
-    compile 'com.github.JeroenMols:LandscapeVideoCamera:1.1.3'
+    compile project(':library')
 }
